[package]
name = "hdd"
description = "hdd: instruments for querying ATA and SCSI disks"
version = "0.7.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
repository = "https://github.com/vthriller/hdd-rs"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
libc = "0.2"
serde = "0.9"
serde_derive = "0.9"
nom = "^2.2"
regex = "0.2"
byteorder = "1"

[target.'cfg(target_os = "freebsd")'.build-dependencies]
bindgen = "0.26.3"

[lib]
name = "hdd"
