[package]
name = "hdd"
description = "hdd: instruments for querying ATA and SCSI disks"
version = "0.9.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
repository = "https://github.com/vthriller/hdd-rs"
license = "MPL-2.0"
readme = "README.md"

[workspace]
members = ["cli", "sample-scsi"]

[dependencies]
libc = "0.2"
nom = "^2.2"
regex = "0.2"
byteorder = "1"
quick-error = "1.2"

serde = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }

[features]
default = []
serializable = ["serde", "serde_derive"]

[target.'cfg(target_os = "freebsd")'.build-dependencies]
bindgen = "0.26.3"

[lib]
name = "hdd"
