[package]
name = "hdd"
description = "hdd: instruments for querying ATA and SCSI disks"
version = "0.9.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
repository = "https://github.com/vthriller/hdd-rs"
license = "MPL-2.0"
readme = "README.md"

[workspace]
members = ["sample-scsi", "drivedb-bench"]

[dependencies]
libc = "0.2"
nom = "^2.2"
regex = "0.2"
byteorder = "1"
quick-error = "1.2"
log = "0.3"

# feature: serializable
serde = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }

# feature: bin
clap = { version = ">=0.6.6", optional = true }
serde_json = { version = "0.9", optional = true }
separator = { version = "0.3.1", optional = true }
number_prefix = { version = "0.2.7", optional = true }
prettytable-rs = { version = "^0.6", optional = true }
env_logger = { version = "0.4", optional = true }
lazy_static = { version = "1.0", optional = true }

[features]
default = []
serializable = ["serde", "serde_derive"]
# XXX 'bin' feature depends on 'serializable'; for now this is reflected in [bin].required-features
bin = ["clap", "serde_json", "separator", "number_prefix", "prettytable-rs", "env_logger", "lazy_static"]

[target.'cfg(target_os = "freebsd")'.build-dependencies]
bindgen = "0.26.3"

[[bin]]
name = "hdd"
required-features = ["bin", "serializable"]
doc = false
