# TODO? better name for the crate and its binary

[package]
name = "smart-rs-cli"
version = "0.4.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]

[dependencies]
clap = ">=0.6.6"
serde_json = "0.9"
separator = "0.3.1"
number_prefix = "0.2.7"
smart-rs = { path = ".." }

[[bin]]
name = "smart-rs"
