[package]
name = "hdd-cli"
version = "0.9.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]

[dependencies]
clap = ">=0.6.6"
serde_json = "0.9"
separator = "0.3.1"
number_prefix = "0.2.7"
prettytable-rs = "^0.6"
log = "0.3"
env_logger = "0.4"
hdd = { path = "..", features = ["serializable"] }

[[bin]]
name = "hdd"
